--- a/admin.html
+++ b/admin.html
@@ -1,53 +1,11 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!-- admin.html (updated with cleaner layout, new fields) -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin - The Geek Shop</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/react@18.2.0/umd/react.production.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/babel-standalone@6.26.0/babel.min.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
   <script src="script.js" type="module"></script>
 </head>
 <body>
@@ -64,142 +22,141 @@
   </header>
 
   <main class="container">
-    <div id="login-panel" class="card p-6" style="display: none;">
-      <h2 class="text-2xl font-semibold mb-4">Admin Login</h2>
+    <div id="login-panel" class="card" style="display: none;">
+      <h2>Admin Login</h2>
       <form id="login-form" class="form">
-        <div class="mb-4">
-          <label class="block font-medium mb-2">Email</label>
-          <input id="admin-email" type="email" class="w-full p-2 border rounded" required>
+        <div>
+          <label>Email</label>
+          <input id="admin-email" type="email" required>
         </div>
-        <div class="mb-4">
-          <label class="block font-medium mb-2">Password</label>
-          <input id="admin-pass" type="password" class="w-full p-2 border rounded" required>
+        <div>
+          <label>Password</label>
+          <input id="admin-pass" type="password" required>
         </div>
-        <button type="submit" class="w-full bg-blue-500 text-white p-2 rounded hover:bg-blue-600">Login</button>
+        <button type="submit">Login</button>
       </form>
     </div>
 
-    <div id="admin-panel" class="card p-6" style="display: none;">
-      <div class="panel-header mb-6">
-        <h2 class="text-2xl font-semibold">Admin Panel</h2>
-        <button onclick="logoutAdmin()" class="bg-red-500 text-white p-2 rounded hover:bg-red-600">Logout</button>
+    <div id="admin-panel" class="card" style="display: none;">
+      <div class="panel-header">
+        <h2>Admin Panel</h2>
+        <button onclick="logoutAdmin()">Logout</button>
       </div>
 
-      <div class="mb-8">
-        <h3 class="text-xl font-semibold mb-4">Add Product</h3>
-        <form id="add-product-form" class="form grid gap-4">
-          <div class="row">
-            <div>
-              <label class="block font-medium mb-2">Name</label>
-              <input id="add-name" class="w-full p-2 border rounded" required>
-            </div>
-            <div>
-              <label class="block font-medium mb-2">Price (tk)</label>
-              <input id="add-price" class="w-full p-2 border rounded" required>
-            </div>
-          </div>
-          <div class="row">
-            <div>
-              <label class="block font-medium mb-2">Discount (tk)</label>
-              <input id="add-discount" value="0" class="w-full p-2 border rounded">
-            </div>
-            <div>
-              <label class="block font-medium mb-2">Featured Image URL</label>
-              <input id="add-featured-image" class="w-full p-2 border rounded" required>
-            </div>
-          </div>
-          <div class="row">
-            <div>
-              <label class="block font-medium mb-2">Additional Image URLs (comma-separated)</label>
-              <input id="add-images" class="w-full p-2 border rounded">
-            </div>
-            <div>
-              <label class="block font-medium mb-2">Category</label>
-              <select id="add-category" class="w-full p-2 border rounded" required>
-                <option value="all">All</option>
-                <option value="new">New Arrivals</option>
-                <option value="hot">Hot Deals</option>
-                <option value="electronics">Electronics</option>
-                <option value="accessories">Accessories</option>
-              </select>
-            </div>
-          </div>
-          <div class="row">
-            <div>
-              <label class="block font-medium mb-2">Color</label>
-              <input id="add-color" class="w-full p-2 border rounded">
-            </div>
-            <div>
-              <label class="block font-medium mb-2">Stock</label>
-              <input id="add-stock" type="number" value="0" class="w-full p-2 border rounded">
-            </div>
-          </div>
-          <div class="row">
-            <div>
-              <label class="block font-medium mb-2">Availability</label>
-              <select id="add-availability" class="w-full p-2 border rounded" required>
-                <option value="Ready">Ready to Order</option>
-                <option value="Pre Order">Pre Order</option>
-                <option value="Upcoming">Upcoming</option>
-              </select>
-            </div>
+      <h2>Add Product</h2>
+      <form id="add-product-form" class="form">
+        <div class="row">
+          <div>
+            <label>Name</label>
+            <input id="add-name" required>
           </div>
           <div>
-            <label class="block font-medium mb-2">Description</label>
-            <textarea id="add-desc" class="w-full p-2 border rounded min-h-[100px]"></textarea>
+            <label>Price (tk)</label>
+            <input id="add-price" required>
           </div>
-          <button type="submit" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600">Add Product</button>
-        </form>
+        </div>
+        <div class="row">
+          <div>
+            <label>Discount (tk)</label>
+            <input id="add-discount" value="0">
+          </div>
+          <div>
+            <label>Image URLs (comma-separated)</label>
+            <input id="add-image" required>
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <label>Badge Category</label>
+            <select id="add-category" required>
+              <option value="all">All</option>
+              <option value="new">New</option>
+              <option value="hot">Hot</option>
+            </select>
+          </div>
+          <div>
+            <label>Main Category</label>
+            <select id="add-main-category" required>
+              <option value="Keycaps">Keycaps</option>
+              <option value="Switches">Switches</option>
+              <option value="Keyboard and BareBones">Keyboard and BareBones</option>
+              <option value="Collectables">Collectables</option>
+            </select>
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <label>Color</label>
+            <input id="add-color">
+          </div>
+          <div>
+            <label>Stock</label>
+            <input id="add-stock" type="number" value="0">
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <label>Availability</label>
+            <select id="add-availability" required>
+              <option value="Ready">Ready to Order</option>
+              <option value="Pre Order">Pre Order</option>
+              <option value="Upcoming">Upcoming</option>
+            </select>
+          </div>
+        </div>
+        <div>
+          <label>Description</label>
+          <textarea id="add-desc"></textarea>
+        </div>
+        <button type="submit">Add Product</button>
+      </form>
+
+      <h2>Products</h2>
+      <div class="table-wrapper">
+        <table class="data-table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Name</th>
+              <th>Price</th>
+              <th>Badge Category</th>
+              <th>Main Category</th>
+              <th>Color</th>
+              <th>Discount (tk)</th>
+              <th>Stock</th>
+              <th>Availability</th>
+              <th>Slug</th>
+              <th>Status</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="products-body"></tbody>
+        </table>
       </div>
 
-      <div class="mb-8">
-        <h3 class="text-xl font-semibold mb-4">Products</h3>
-        <div class="table-wrapper">
-          <table class="data-table">
-            <thead>
-              <tr>
-                <th></th>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Category</th>
-                <th>Color</th>
-                <th>Discount (tk)</th>
-                <th>Stock</th>
-                <th>Availability</th>
-                <th>Status</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <tbody id="products-body"></tbody>
-          </table>
-        </div>
-      </div>
-
-      <div>
-        <h3 class="text-xl font-semibold mb-4">Orders</h3>
-        <div class="table-wrapper">
-          <table class="data-table">
-            <thead>
-              <tr>
-                <th></th>
-                <th>Time</th>
-                <th>Product</th>
-                <th>Color</th>
-                <th>Qty</th>
-                <th>Delivery</th>
-                <th>Paid</th>
-                <th>Due</th>
-                <th>Name</th>
-                <th>Phone</th>
-                <th>Address</th>
-                <th>Payment</th>
-                <th>Txn ID</th>
-                <th>Status</th>
-              </tr>
-            </thead>
-            <tbody id="orders-body"></tbody>
-          </table>
-        </div>
+      <h2>Orders</h2>
+      <div class="table-wrapper">
+        <table class="data-table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Time</th>
+              <th>Product</th>
+              <th>Color</th>
+              <th>Qty</th>
+              <th>Delivery</th>
+              <th>Paid</th>
+              <th>Due</th>
+              <th>Name</th>
+              <th>Phone</th>
+              <th>Address</th>
+              <th>Payment</th>
+              <th>Txn ID</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tbody id="orders-body"></tbody>
+        </table>
       </div>
     </div>
   </main>
