--- a/admin.html
+++ b/admin.html
@@ -1,4 +1,4 @@
-<!-- admin.html (updated with cleaner layout, new fields) -->
+<!-- admin.html (unchanged, as not mentioned) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,6 +17,10 @@
         <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
+      </div>
+      <div class="search-bar">
+        <input type="text" id="search-input" placeholder="Search products...">
+        <button id="search-btn">Search</button>
       </div>
     </nav>
   </header>
