--- a/status.html
+++ b/status.html
@@ -1,4 +1,4 @@
-<!-- status.html (updated nav) -->
+<!-- status.html (updated nav with search) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,6 +25,10 @@
         <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
+      </div>
+      <div class="search-bar">
+        <input type="text" id="search-input" placeholder="Search products...">
+        <button id="search-btn">Search</button>
       </div>
     </nav>
   </header>
