--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- index.html (now Home page) -->
+<!-- index.html (Home page, updated May Interest You without animation, symmetrical cards) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,15 +18,17 @@
         <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
       </div>
+      <div class="search-bar">
+        <input type="text" id="search-input" placeholder="Search products...">
+        <button id="search-btn">Search</button>
+      </div>
     </nav>
   </header>
 
   <main class="container">
     <section id="may-interest-you">
       <h2>May Interest You</h2>
-      <div class="carousel">
-        <div class="carousel-inner"></div>
-      </div>
+      <div class="product-grid"></div>
     </section>
 
     <section id="categories">
