--- a/index.html
+++ b/index.html
@@ -13,36 +13,40 @@
       <div class="logo"><img src="https://i.ibb.co/2nRwX9G/logo.png" alt="Logo" width="50"></div>
       <div class="nav-links">
         <a href="index.html">Home</a>
-        <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
-      </div>
-      <div class="search-bar">
-        <input type="text" id="search-input" placeholder="Search products...">
-        <button id="search-btn">Search</button>
       </div>
     </nav>
   </header>
 
   <main class="container">
-    <section id="may-interest-you">
-      <h2>May Interest You</h2>
-      <div class="product-grid"></div>
+    <section class="hero">
+      <h1>Welcome to The Geek Shop</h1>
+      <p class="muted">Your one-stop shop for premium keycaps, switches, keyboards, and collectables.</p>
     </section>
 
-    <section id="categories">
-      <h2>Categories</h2>
-      <div class="category-grid">
-        <div class="category-btn" style="background-image: url('https://placehold.co/300x200?text=Keycaps')" onclick="location.href='products.html?category=Keycaps'">Keycaps</div>
-        <div class="category-btn" style="background-image: url('https://placehold.co/300x200?text=Switches')" onclick="location.href='products.html?category=Switches'">Switches</div>
-        <div class="category-btn" style="background-image: url('https://placehold.co/300x200?text=Keyboard+and+BareBones')" onclick="location.href='products.html?category=Keyboard%20and%20BareBones'">Keyboard and BareBones</div>
-        <div class="category-btn" style="background-image: url('https://placehold.co/300x200?text=Collectables')" onclick="location.href='products.html?category=Collectables'">Collectables</div>
-      </div>
-    </section>
+    <h2>May Interest You</h2>
+    <div id="interest-products" class="product-list"></div>
+
+    <h2>Shop by Category</h2>
+    <div class="categories">
+      <a href="category.html?cat=keycaps" class="category-btn" style="background-image: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');">
+        <span>Keycaps</span>
+      </a>
+      <a href="category.html?cat=switches" class="category-btn" style="background-image: url('https://images.unsplash.com/photo-1618384887929-9b3b5b92d0d6?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');">
+        <span>Switches</span>
+      </a>
+      <a href="category.html?cat=keyboard-barebones" class="category-btn" style="background-image: url('https://images.unsplash.com/photo-1587829740916-5f4c3b3c6f0e?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');">
+        <span>Keyboard & Barebones</span>
+      </a>
+      <a href="category.html?cat=collectables" class="category-btn" style="background-image: url('https://images.unsplash.com/photo-1586023492125-27b2c4452d9f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');">
+        <span>Collectables</span>
+      </a>
+    </div>
   </main>
 
   <div id="image-viewer" class="image-viewer">
-    <button id="close-viewer" class="close-viewer">&times;</button>
+    <button id="close-viewer" class="close-viewer">×</button>
     <img id="viewer-img" src="" alt="">
   </div>
 
@@ -55,93 +59,51 @@
       <form id="checkout-form" class="form">
         <input type="hidden" id="co-product-id">
         <div class="row">
-          <div>
-            <label>Product Name</label>
-            <input id="co-product-name" readonly>
-          </div>
-          <div>
-            <label>Color</label>
-            <input id="co-color" readonly>
-          </div>
+          <div><label>Product Name</label><input id="co-product-name" readonly></div>
+          <div><label>Color</label><input id="co-color" readonly></div>
         </div>
         <div class="row">
-          <div>
-            <label>Price (tk)</label>
-            <input id="co-price" readonly>
-            <input type="hidden" id="co-unit-price-raw">
-            <input type="hidden" id="co-available-stock">
-          </div>
-          <div>
-            <label>Quantity</label>
-            <input id="co-qty" type="number" min="1" value="1">
-          </div>
+          <div><label>Price (tk)</label><input id="co-price" readonly><input type="hidden" id="co-unit-price-raw"><input type="hidden" id="co-available-stock"></div>
+          <div><label>Quantity</label><input id="co-qty" type="number" min="1" value="1"></div>
         </div>
         <div class="row">
-          <div>
-            <label>Delivery</label>
-            <input id="co-delivery" readonly>
-          </div>
-          <div>
-            <label>Total (tk)</label>
-            <input id="co-total" readonly>
-          </div>
+          <div><label>Delivery</label><input id="co-delivery" readonly></div>
+          <div><label>Total (tk)</label><input id="co-total" readonly></div>
         </div>
         <div class="row">
-          <div>
-            <label>Name</label>
-            <input id="co-name" required>
-          </div>
-          <div>
-            <label>Phone</label>
-            <input id="co-phone" type="tel" required>
-          </div>
+          <div><label>Name</label><input id="co-name" required></div>
+          <div><label>Phone</label><input id="co-phone" type="tel" required></div>
         </div>
-        <div>
-          <label>Address</label>
-          <textarea id="co-address" required></textarea>
-        </div>
+        <div><label>Address</label><textarea id="co-address" required></textarea></div>
         <div class="row">
-          <div>
-            <label>Payment Method</label>
+          <div><label>Payment Method</label>
             <select id="co-payment" required>
               <option value="">Select</option>
               <option value="Cash on Delivery">Cash on Delivery</option>
               <option value="Bkash">Bkash</option>
             </select>
           </div>
-          <div>
-            <label>Pay to (Send money)</label>
-            <input id="co-payment-number" readonly>
-          </div>
+          <div><label>Pay to</label><input id="co-payment-number" readonly></div>
         </div>
         <div class="row">
-          <div>
-            <label>Pay Now (tk)</label>
-            <input id="co-pay-now" readonly>
-          </div>
-          <div>
-            <label>Due Amount (tk)</label>
-            <input id="co-due-amount" readonly>
-          </div>
+          <div><label>Pay Now (tk)</label><input id="co-pay-now" readonly></div>
+          <div><label>Due Amount (tk)</label><input id="co-due-amount" readonly></div>
         </div>
-        <div>
-          <label>Transaction ID</label>
-          <input id="co-txn">
-        </div>
-        <div>
-          <label>
-            <input type="checkbox" id="co-policy" required>
-            I agree to the <a href="status.html">Order Policy</a>
-          </label>
-        </div>
-        <div>
-          <p id="co-note" class="muted"></p>
-        </div>
+        <div><label>Transaction ID</label><input id="co-txn"></div>
+        <div><label><input type="checkbox" id="co-policy" required> I agree to the <a href="status.html">Order Policy</a></label></div>
+        <div><p id="co-note" class="muted"></p></div>
         <button id="place-order-btn" type="submit">Place Order</button>
       </form>
     </div>
   </div>
 
-  <footer>© All rights reserved by The Geek Shop</footer>
+  <footer>
+    <div class="footer-social">
+      <a href="https://www.facebook.com/thegeek.shop0" target="_blank"><img src="facebook.png" alt="Facebook"></a>
+      <a href="https://www.instagram.com/thegeekshop.0" target="_blank"><img src="instagram.png" alt="Instagram"></a>
+      <a href="https://wa.me/01960788862" target="_blank"><img src="whatsapp.png" alt="WhatsApp"></a>
+    </div>
+    <p>© All rights reserved by The Geek Shop</p>
+  </footer>
 </body>
 </html>
