--- a/product.html
+++ b/product.html
@@ -13,38 +13,28 @@
       <div class="logo"><img src="https://i.ibb.co/2nRwX9G/logo.png" alt="Logo" width="50"></div>
       <div class="nav-links">
         <a href="index.html">Home</a>
-        <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
-      </div>
-      <div class="search-bar">
-        <input type="text" id="search-input" placeholder="Search products...">
-        <button id="search-btn">Search</button>
       </div>
     </nav>
   </header>
 
-  <main class="container product-detail">
-    <div class="product-layout">
+  <main class="container">
+    <div id="product-detail" class="product-detail card">
       <div class="product-images">
-        <img id="featured-img" src="" alt="">
-        <div class="thumbnails"></div>
+        <img id="featured-img" src="" alt="Featured Image" class="main-image">
+        <div id="thumbnails" class="thumbnails"></div>
       </div>
       <div class="product-info">
         <h1 id="product-name"></h1>
-        <p class="price" id="product-price"></p>
         <div class="badges" id="product-badges"></div>
-        <div class="muted" id="product-color"></div>
-        <p id="product-description"></p>
-        <div class="order-row">
-          <button id="order-btn">Order</button>
-        </div>
+        <p class="price" id="product-price"></p>
+        <p id="product-desc" class="desc"></p>
+        <p class="muted" id="product-stock"></p>
+        <p class="muted" id="product-availability"></p>
+        <button id="order-btn" class="preorder-btn">Order Now</button>
       </div>
     </div>
-    <section id="other-products">
-      <h2>Other Products</h2>
-      <div class="product-grid"></div>
-    </section>
   </main>
 
   <div id="checkout-modal" class="modal">
@@ -56,93 +46,51 @@
       <form id="checkout-form" class="form">
         <input type="hidden" id="co-product-id">
         <div class="row">
-          <div>
-            <label>Product Name</label>
-            <input id="co-product-name" readonly>
-          </div>
-          <div>
-            <label>Color</label>
-            <input id="co-color" readonly>
-          </div>
+          <div><label>Product Name</label><input id="co-product-name" readonly></div>
+          <div><label>Color</label><input id="co-color" readonly></div>
         </div>
         <div class="row">
-          <div>
-            <label>Price (tk)</label>
-            <input id="co-price" readonly>
-            <input type="hidden" id="co-unit-price-raw">
-            <input type="hidden" id="co-available-stock">
-          </div>
-          <div>
-            <label>Quantity</label>
-            <input id="co-qty" type="number" min="1" value="1">
-          </div>
+          <div><label>Price (tk)</label><input id="co-price" readonly><input type="hidden" id="co-unit-price-raw"><input type="hidden" id="co-available-stock"></div>
+          <div><label>Quantity</label><input id="co-qty" type="number" min="1" value="1"></div>
         </div>
         <div class="row">
-          <div>
-            <label>Delivery</label>
-            <input id="co-delivery" readonly>
-          </div>
-          <div>
-            <label>Total (tk)</label>
-            <input id="co-total" readonly>
-          </div>
+          <div><label>Delivery</label><input id="co-delivery" readonly></div>
+          <div><label>Total (tk)</label><input id="co-total" readonly></div>
         </div>
         <div class="row">
-          <div>
-            <label>Name</label>
-            <input id="co-name" required>
-          </div>
-          <div>
-            <label>Phone</label>
-            <input id="co-phone" type="tel" required>
-          </div>
+          <div><label>Name</label><input id="co-name" required></div>
+          <div><label>Phone</label><input id="co-phone" type="tel" required></div>
         </div>
-        <div>
-          <label>Address</label>
-          <textarea id="co-address" required></textarea>
-        </div>
+        <div><label>Address</label><textarea id="co-address" required></textarea></div>
         <div class="row">
-          <div>
-            <label>Payment Method</label>
+          <div><label>Payment Method</label>
             <select id="co-payment" required>
               <option value="">Select</option>
               <option value="Cash on Delivery">Cash on Delivery</option>
               <option value="Bkash">Bkash</option>
             </select>
           </div>
-          <div>
-            <label>Pay to (Send money)</label>
-            <input id="co-payment-number" readonly>
-          </div>
+          <div><label>Pay to</label><input id="co-payment-number" readonly></div>
         </div>
         <div class="row">
-          <div>
-            <label>Pay Now (tk)</label>
-            <input id="co-pay-now" readonly>
-          </div>
-          <div>
-            <label>Due Amount (tk)</label>
-            <input id="co-due-amount" readonly>
-          </div>
+          <div><label>Pay Now (tk)</label><input id="co-pay-now" readonly></div>
+          <div><label>Due Amount (tk)</label><input id="co-due-amount" readonly></div>
         </div>
-        <div>
-          <label>Transaction ID</label>
-          <input id="co-txn">
-        </div>
-        <div>
-          <label>
-            <input type="checkbox" id="co-policy" required>
-            I agree to the <a href="status.html">Order Policy</a>
-          </label>
-        </div>
-        <div>
-          <p id="co-note" class="muted"></p>
-        </div>
+        <div><label>Transaction ID</label><input id="co-txn"></div>
+        <div><label><input type="checkbox" id="co-policy" required> I agree to the <a href="status.html">Order Policy</a></label></div>
+        <div><p id="co-note" class="muted"></p></div>
         <button id="place-order-btn" type="submit">Place Order</button>
       </form>
     </div>
   </div>
 
-  <footer>© All rights reserved by The Geek Shop</footer>
+  <footer>
+    <div class="footer-social">
+      <a href="https://www.facebook.com/thegeek.shop0" target="_blank"><img src="facebook.png" alt="Facebook"></a>
+      <a href="https://www.instagram.com/thegeekshop.0" target="_blank"><img src="instagram.png" alt="Instagram"></a>
+      <a href="https://wa.me/01960788862" target="_blank"><img src="whatsapp.png" alt="WhatsApp"></a>
+    </div>
+    <p>© All rights reserved by The Geek Shop</p>
+  </footer>
 </body>
 </html>
